--- a/chart.yaml
+++ b/chart.yaml
@@ -4,7 +4,7 @@ metadata:
   name: home-assistant
   namespace: argocd
 spec:
-  project: default
+  project: homelab
   source:
     chart: home-assistant
     repoURL: https://github.com/k8s-at-home/charts/tree/master/charts/stable/home-assistant
