--- a/chart.yaml
+++ b/chart.yaml
@@ -6,9 +6,9 @@ metadata:
 spec:
   project: homelab
   source:
-    chart: home-assistant
+    chart: home-assistant k8s-at-home/home-assistant
     targetRevision: 13.4.2
-    repoURL: https://github.com/k8s-at-home/charts/tree/master/charts/stable/home-assistant
+    repoURL: https://k8s-at-home.com/charts/
     helm:
       releaseName: home-assistant
       valueFiles:
