--- a/kustomization.yaml
+++ b/kustomization.yaml
@@ -1,5 +1,11 @@
 apiVersion: kustomize.config.k8s.io/v1beta1
 kind: Kustomization
+
 namespace: homeassistant
+
 resources:
-- resources/ingress-route.yaml
+  - resources/namespace.yaml
+  - resources/deployment.yaml
+  - resources/service.yaml
+  - resources/ingress-route.yaml
+  - resources/pvc.yaml
