--- a/old/resources/ingress-route.yaml
+++ b/old/resources/ingress-route.yaml
@@ -2,7 +2,7 @@ apiVersion: traefik.containo.us/v1alpha1
 kind: IngressRoute
 
 metadata:
-  name: home-assistant
+  name: homeassistant
 spec:
   entryPoints:
     - websecure
