--- a/resources/deployment.yaml
+++ b/resources/deployment.yaml
@@ -6,6 +6,9 @@ metadata:
     app: home-assistant
 spec:
   replicas: 1
+  selector:
+    matchLabels:
+      app: home-assistant
   template:
     metadata:
       labels:
